--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,8 +6,8 @@
         <title>Play! Story</title>
         <meta http-equiv="Content-Type" content="text/html; charset=${_response_encoding}"/>
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")">
-        <script type="text/javascript">
-        </script>
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/main.js")"></script>
     </head>
     <body>
         <div id="header" class="block">
@@ -24,7 +24,7 @@
                 <span id="start">Start !</span>
             </div>
             <div id="started">
-                <span id="stop">Stop ...</span>
+                <span id="stop">Stop...</span>
             </div>
             <div id="narrow">
               <form>
