currently working on UI

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -26,6 +26,9 @@
             <div id="started">
                 <span id="stop">Stop...</span>
             </div>
+            <div id="finished">
+                <span id="clear">Clear</span>
+            </div>
             <div id="narrow">
               <form>
                 <input id="keywords" type="search" />
