scroll on found log

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -29,8 +29,7 @@
             </div>
             <div id="narrow">
               <form>
-                <input id="keywords" type="search" />
-                <input type="submit" value="Search/Filter" />
+                <input id="keywords" type="text" />
               </form>
             </div>
         </div>
