--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -181,7 +181,8 @@ ul {
     padding-left: 20px;
 }
 
-#logs li {
+#logs li.log {
+    display: none;
     margin-bottom: 10px;
     margin-top: 10px;
     border: 1px grey;
@@ -199,6 +200,10 @@ ul {
     width: 300px;
 }
 
-#narrow input[type="search"] {
-    width: 200px;
+#narrow input[type="text"] {
+    width: 275px;
+    height: 25px;
+    border-radius: 5px;
+    font-size: 1.2em;
+    color: #77787D;
 }
