migrate to procrastination library

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,13 +7,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=${_response_encoding}"/>
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")">
         <script type="text/javascript" src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")"></script>
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/main.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/procrastination.js")"></script>
+        <!--<script type="text/javascript" src="@routes.Assets.at("javascripts/main.js")"></script>-->
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/session.js")"></script>
     </head>
     <body>
         <div id="header" class="block">
-            <h1>
-                Play! Story
-            </h1>
+            <h1>Play! Story</h1>
             <p>
                 <strong>To listen stories from your app</strong>, click [Start] and enjoy
             </p>
