--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -204,24 +204,22 @@ ul {
     min-height: 33px;
     background-color: white;
     word-wrap: break-word;
-    overflow: auto;
 }
 
-#logs li.log div.name {
-    float: left;
+#logs li.log span.name {
+    display: inline-block;
     border: 1px solid grey;
     border-right: 25px;
-    padding-right: 10px;
-    min-height: 25px;
     background-color: #BEE796 !important;
     border-radius: 9px;
-    padding-top: 8px;
     text-align: center;
+    padding: 5px;
+    height: 20px;
 }
 
-#logs li.log div.value {
-    float: left;
-    width: 99%;
+#logs li.log span.value {
+    display: inline-block;
+    width: 98%;
     margin-left: 10px;
     padding-top: 8px;
 }
@@ -231,7 +229,29 @@ ul {
     border-color: #0079C2;
 }
 
-#logs li.log.variable {
+#logs li.log.variable span.name {
+    background-color: #BEBEBE !important;
+}
+
+
+#logs li.log.variable.invalid {
+    box-shadow: 0px 0px 4px 1px red !important;
+}
+
+#logs li.log.variable.valid {
+    box-shadow: 0px 0px 4px 1px green !important;
+}
+
+#logs li.log.variable.xml span.name {
+    background-color: #96CEC0 !important;
+}
+
+#logs li.log.variable.group span.value {
+    background-color: #F8C83A !important;
+}
+
+#logs li.log.variable.json span.name {
+    background-color: #BEE796 !important;
 }
 
 #narrow {
