adding filter action

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -30,6 +30,7 @@
             <div id="narrow">
               <form>
                 <input id="keywords" type="text" />
+                <input type="checkbox" />
               </form>
             </div>
         </div>
