--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -263,7 +263,7 @@ ul {
 #narrow {
     margin-right: auto;
     margin-left: auto;
-    width: 300px;
+    width: 306px;
 }
 
 #narrow input[type="text"] {
@@ -272,4 +272,9 @@ ul {
     border-radius: 5px;
     font-size: 1.2em;
     color: #77787D;
+}
+
+#narrow input[type="checkbox"] {
+    width: 15px;
+    height: 15px;
 }
