--- a/app/views/last.scala.html
+++ b/app/views/last.scala.html
@@ -1,10 +1,15 @@
+@(project: String, logs: List[models.Log])
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
-        <title>Play! Story</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=${_response_encoding}"/>
+      <title>Play! Story</title>
     </head>
     <body>
-      Welcome !
+      <ul>
+        @logs.map { l =>
+        <li>@l.message</li>
+        }
+      </ul>
     </body>
 </html>
