--- a/app/views/story.scala.html
+++ b/app/views/story.scala.html
@@ -41,7 +41,7 @@
         </div>
         <iframe id="stream" src="#" style="display: none;"></iframe>
         <script type="text/javascript">
-          session.init('@routes.Application.listen(project)');
+          session.init('@routes.Story.listen(project)');
         </script>
     </body>
 </html>
