add gmail support to playstory

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(signinForm: Form[(String, String)], signupForm: Form[User])
+@(signinForm: Form[(String, String)], signupForm: Form[(String, String, String)])
 
 <!DOCTYPE html>
 <html>
