--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(signinForm: Form[(String, String)], signupForm: Form[(String, String, String)])
+@()
 
 <!DOCTYPE html>
 <html>
@@ -6,58 +6,7 @@
         <title></title>
     </head>
     <body>
-      <fieldset class="signin">
-        <legend>Sign In</legend>
-        <form action="@routes.Application.signin()" method="POST">
-          @signinForm.forField("pseudo") { field =>
-          <label>Pseudo   <input type="text" name="pseudo" value="@field.value" required /></label>
-          <ul class="errors">
-            @field.error.map { error =>
-            <li>@error</li>
-            }
-          </ul>
-          }
-          @signinForm.forField("password") { field =>
-          <label>Password <input type="password" name="password" value="@field.value" required /></label>
-          <ul class="errors">
-            @field.error.map { error =>
-            <li>@error</li>
-            }
-          </ul>
-          }
-          <button>Sign In</button>
-        </form>
-      </fieldset>
-
-      <fieldset class="signup">
-        <legend>Sign Up</legend>
-        <form action="@routes.Application.signup()" method="POST">
-          @signupForm.forField("pseudo") { field =>
-          <label>Pseudo <input type="text" name="@field.name" value="@field.value" /></label>
-          <ul class="errors">
-            @field.error.map { error =>
-            <li>@error</li>
-            }
-          </ul>
-          }
-          @signupForm.forField("email") { field =>
-          <label>Email <input type="email" name="@field.name" value="@field.value" /></label>
-          <ul class="errors">
-            @field.error.map { error =>
-            <li>@error</li>
-            }
-          </ul>
-          }
-          @signupForm.forField("password") { field =>
-          <label>Password <input type="password" name="@field.name" value="@field.value" /></label>
-          <ul class="errors">
-            @field.error.map { error =>
-            <li>@error</li>
-            }
-          </ul>
-          }
-          <button>Sign Up</button>
-        </form>
-      </fieldset>
+      <h1>Playstory</h1>
+      <a href="@controllers.routes.Application.signin">Sign In</a>
     </body>
 </html>
