--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/layout.css")">
         @css
         <!-- Javascript libs -->
-        <script src="@routes.Assets.at("javascripts/libs/jquery-1.7.1.min.js")" type="text/javascript"></script>
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/procrastination.js")"></script>
     </head>
     <body>
       <header>
