--- a/app/views/story.scala.html
+++ b/app/views/story.scala.html
@@ -1,60 +1,49 @@
 @(project: String, contacts: Seq[models.Contact])
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-    <head>
-        <title>Play! Story</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=${_response_encoding}"/>
-        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")">
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/jquery-1.7.1.min.js")"></script>
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/procrastination_last.js")"></script>
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/commons.js")"></script>
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/story.js")"></script>
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/history.js")"></script>
-    </head>
-    <body>
-        <div id="header" class="block">
-            <h1>Play! Story</h1>
-            <p><strong>To listen stories from your app</strong>, click [Start] and enjoy</p>
-            <div id="loading">waiting ...</div>
-        </div>
-        <div id="cmds" class="block">
-            <div id="stopped">
-                <span id="start">Start !</span>
-            </div>
-            <div id="started">
-                <span id="stop">Stop...</span>
-                <span id="clear">Clear</span>
-            </div>
-            <div id="narrow">
-              <form>
-                <input id="keywords" type="text" />
-                <span>filter</span>
-                <input type="checkbox" />
-              </form>
-            </div>
-            <ul class="tab">
-              <li id="tab_live">Live</li>
-              <li id="tab_past">Past</li>
-            </ul>
-        </div>
-        <div style="display: none;">
-          @contacts.map { contact =>
-           <li><span>@contact.title</span><span>@contact.email</span></li>
-          }
-        </div>
-        <div id="logs_live" class="block">
-          <ul>
-          </ul>
-        </div>
-        <div id="logs_past" class="block">
-          <ul>
-          </ul>
-        </div>
-        <iframe id="stream" src="#" style="display: none;"></iframe>
-        <script type="text/javascript">
-          session.init('@routes.Story.view(project)'); //do like scan'up with data template ?
-          history.init('@routes.Story.view(project)');
-        </script>
-    </body>
-</html>
+@main("Play Story > Sign in") {
+
+<div id="header" class="block">
+  <p><strong>To listen stories from your app</strong>, click [Start] and enjoy</p>
+  <div id="loading">waiting ...</div>
+</div>
+<div id="cmds" class="block">
+  <div id="stopped">
+    <span id="start">Start !</span>
+  </div>
+  <div id="started">
+    <span id="stop">Stop...</span>
+    <span id="clear">Clear</span>
+  </div>
+  <div id="narrow">
+    <form>
+      <input id="keywords" type="text" />
+      <span>filter</span>
+      <input type="checkbox" />
+    </form>
+  </div>
+  <ul class="tab">
+    <li id="tab_live">Live</li>
+    <li id="tab_past">Past</li>
+  </ul>
+</div>
+<div style="display: none;">
+  @contacts.map { contact =>
+  <li><span>@contact.title</span><span>@contact.email</span></li>
+  }
+</div>
+<div id="logs_live" class="block">
+  <ul>
+  </ul>
+</div>
+<div id="logs_past" class="block">
+  <ul>
+  </ul>
+</div>
+<iframe id="stream" src="#" style="display: none;"></iframe>
+}{
+    <!--Story CSS imports -->
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/story.css")">
+}{
+    <!--Story javascript imports -->
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/story.js")"></script>
+}
