--- a/app/assets/stylesheets/signin.less
+++ b/app/assets/stylesheets/signin.less
@@ -1,8 +1,18 @@
 @import "variables.less";
 
-section.content {
-    p {
-        border-left: 1px solid;
-        padding-left: 10px;
+.content {
+    .signin {
+        border: 2px solid white;
+        padding: 10px;
+        text-align: center;
+        color: white;
+        font: 1.9em "Helvetica Nueue", sans-serif;
+        background: @greenPlay;
+
+        a {
+            font-weight: 700;
+            text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
+            color: white;
+        }
     }
 }
