--- a/app/assets/stylesheets/variables.less
+++ b/app/assets/stylesheets/variables.less
@@ -5,3 +5,8 @@
 @greenEmacs: #5ED062;
 @greyEmacs: #9ABAC0;
 @redEmacs: #CA2525;
+
+@redPlay: #E74440;
+@greyPlay: #DCDDD6;
+@blackPlay: #353635;
+@greenPlay: #87B952;
